....I..PS. [ZBXNEXT-2359] made server and proxy refuse to start if StartPollersUnreachable=0, but other pollers are started (asaveljevs)
....I..PS. [ZBX-8557] implemented housekeeper 30 minutes startup delay (Arturs)
A.F.I..PS. [ZBX-7720] increased size of "Host name", "Visible host name" and "Proxy name" fields to 128 characters (Sasha)

Bug fixes:
...G...PS. [ZBX-8494] added check to prevent starting a proxy with a server database and vice versa (Andris)
..F....... [ZBX-8670] fixed undefined index error on the web scenario configuration page when no host is selected (Pavels)
..F....... [ZBX-8531] fixed inconsistent group selection dropdown behaviour in application configuration (Krists)
..F....... [ZBX-8653] fixed big double value check in the decimal validator (Oleg)
..F....... [ZBX-8377] fixed style and hover effect for disabled bulk action buttons and improved readability for readonly input fields (Ivo)
A......... [ZBX-8568] fixed item.delete and itemprototype.delete to also remove trigger prototypes using them (Krists)
A......... [ZBX-8636] fixed user accounts not being disabled after exceeding number of unsuccessful login attempts (Krists)
........S. [ZBX-7721] added support for discovering more than 100 hypervisors on large vcenter installations to vmware collector (dimir, wiper)
...G....S. [ZBX-8564] added standard error output while running remote script (Arturs)
...G...PS. [ZBX-8629] fixed crash in get_string() function when checking "Database monitor" items (asaveljevs)
....IJ.... [ZBX-4800] replaced JSON.org library with Android JSON library; thanks to Volker Fröhlich for legal research (asaveljevs)
.........T [ZBX-4800] fixed typo in item name in "Template JMX Generic": "mpTenured" -> "mp Tenured" (asaveljevs)
..F....... [ZBX-8509] fixed value of field "Use custom multiplier" to correctly default to "1" if checkbox is unchecked (Krists)